external-crates/move/crates/move-compiler/tests/move_2024/typing/syntax_methods_args_invalid.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04034]: 'syntax' method types differ
   ┌─ tests/move_2024/typing/syntax_methods_args_invalid.move:7:39
   │
 7 │     public fun borrow<T>(s: &S<T>, i: u64): &u64 { abort 0 }
   │                                       ^^^ This parameter has type 'u64'
   ·
11 │     public fun borrow_mut<T>(s: &mut S<T>, i: T): &mut u64 { abort 0 }
   │                                               -
   │                                               │
   │                                               Expected this parameter to have type 'u64'
   │                                               It has type 'T'
   │
   = Index operation non-subject parameter types must match exactly

error[E04034]: 'syntax' method types differ
   ┌─ tests/move_2024/typing/syntax_methods_args_invalid.move:20:16
   │
20 │     public fun borrow<T,U,V>(s: &S<T>, i: U, j: V): &u64 { abort 0 }
   │                ^^^^^^ This index function expects 3 type arguments
   ·
24 │     public fun borrow_mut<Q,R>(s: &mut S<Q>, i: R, j: R): &mut u64 { abort 0 }
   │                ---------- This mutable index function expects 2 type arguments
   │
   = Index operations on the same type must take the name number of type arguments

error[E04034]: 'syntax' method types differ
   ┌─ tests/move_2024/typing/syntax_methods_args_invalid.move:34:39
   │
34 │     public fun borrow<T>(s: &S<T>, i: u64, j: T): &T { abort 0 }
   │                                       ^^^ This parameter has type 'u64'
   ·
38 │     public fun borrow_mut<T>(s: &mut S<T>, i: u32, j: T): &mut T { abort 0 }
   │                                               ---
   │                                               │
   │                                               Expected this parameter to have type 'u64'
   │                                               It has type 'u32'
   │
   = Index operation non-subject parameter types must match exactly

error[E04034]: 'syntax' method types differ
   ┌─ tests/move_2024/typing/syntax_methods_args_invalid.move:48:16
   │
48 │     public fun borrow<T,Q>(s: &S<T>, i: u64, j: Q): &T { abort 0 }
   │                ^^^^^^ This index function expects 2 type arguments
   ·
52 │     public fun borrow_mut<T>(s: &mut S<T>, i: u64, j: T): &mut T { abort 0 }
   │                ---------- This mutable index function expects 1 type arguments
   │
   = Index operations on the same type must take the name number of type arguments

error[E04034]: 'syntax' method types differ
   ┌─ tests/move_2024/typing/syntax_methods_args_invalid.move:62:41
   │
62 │     public fun borrow<T,Q>(s: &S<T>, i: u64, j: Q): &T { abort 0 }
   │                                         ^^^ This parameter has type 'u64'
   ·
66 │     public fun borrow_mut<T,Q>(s: &mut S<T>, i: u32, j: T): &mut T { abort 0 }
   │                                                 ---
   │                                                 │
   │                                                 Expected this parameter to have type 'u64'
   │                                                 It has type 'u32'
   │
   = Index operation non-subject parameter types must match exactly

error[E04034]: 'syntax' method types differ
   ┌─ tests/move_2024/typing/syntax_methods_args_invalid.move:62:49
   │
62 │     public fun borrow<T,Q>(s: &S<T>, i: u64, j: Q): &T { abort 0 }
   │                                                 ^ This parameter has type 'Q'
   ·
66 │     public fun borrow_mut<T,Q>(s: &mut S<T>, i: u32, j: T): &mut T { abort 0 }
   │                                                         -
   │                                                         │
   │                                                         Expected this parameter to have type 'Q'
   │                                                         It has type 'T'
   │
   = Index operation non-subject parameter types must match exactly

error[E04034]: 'syntax' method types differ
   ┌─ tests/move_2024/typing/syntax_methods_args_invalid.move:76:41
   │
76 │     public fun borrow<T,R>(s: &S<T>, i: R, j: T): &T { abort 0 }
   │                                         ^ This parameter has type 'R'
   ·
80 │     public fun borrow_mut<T,R>(s: &mut S<T>, i: T, j: T): &mut T { abort 0 }
   │                                                 -
   │                                                 │
   │                                                 Expected this parameter to have type 'R'
   │                                                 It has type 'T'
   │
   = Index operation non-subject parameter types must match exactly

error[E04034]: 'syntax' method types differ
   ┌─ tests/move_2024/typing/syntax_methods_args_invalid.move:90:39
   │
90 │     public fun borrow<T>(s: &S<T>, i: u64): &T {
   │                                       ^^^ This parameter has type 'u64'
   ·
95 │     public fun borrow_mut<T>(s: &mut S<T>, i: u32): &mut T {
   │                                               ---
   │                                               │
   │                                               Expected this parameter to have type 'u64'
   │                                               It has type 'u32'
   │
   = Index operation non-subject parameter types must match exactly

error[E04034]: 'syntax' method types differ
    ┌─ tests/move_2024/typing/syntax_methods_args_invalid.move:107:39
    │
107 │     public fun borrow<T>(s: &S<T>, i: &u64, j: T): &T { abort 0 }
    │                                       ^^^^ This parameter has type '&u64'
    ·
111 │     public fun borrow_mut<T>(s: &mut S<T>, i: &mut u64, j: T): &mut T { abort 0 }
    │                                               --------
    │                                               │
    │                                               Expected this parameter to have type '&u64'
    │                                               It has type '&mut u64'
    │
    = Index operation non-subject parameter types must match exactly

error[E04034]: 'syntax' method types differ
    ┌─ tests/move_2024/typing/syntax_methods_args_invalid.move:121:48
    │
121 │     public fun borrow<T>(s: &S<T>, i: &u64, j: &T): &T { abort 0 }
    │                                                ^^ This parameter has type '&T'
    ·
125 │     public fun borrow_mut<T>(s: &mut S<T>, i: &u64, j: &mut T): &mut T { abort 0 }
    │                                                        ------
    │                                                        │
    │                                                        Expected this parameter to have type '&T'
    │                                                        It has type '&mut T'
    │
    = Index operation non-subject parameter types must match exactly

error[E04034]: 'syntax' method types differ
    ┌─ tests/move_2024/typing/syntax_methods_args_invalid.move:135:48
    │
135 │     public fun borrow<T>(s: &S<T>, i: &u64, j: &mut T): &T { abort 0 }
    │                                                ^^^^^^ This parameter has type '&mut T'
    ·
139 │     public fun borrow_mut<T>(s: &mut S<T>, i: &u64, j: &T): &mut T { abort 0 }
    │                                                        --
    │                                                        │
    │                                                        Expected this parameter to have type '&mut T'
    │                                                        It has type '&T'
    │
    = Index operation non-subject parameter types must match exactly
